<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title_height"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@color/colorBackgroundmain"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/margin_left"
            android:background="@drawable/menu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tangcan"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_height="wrap_content"
        android:text="@string/tangcan1"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/tangcan2"
        android:textSize="@dimen/text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>


</LinearLayout>