<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundmain">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_exercise"
            android:background="@drawable/exercise"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            android:id="@+id/text_exercise"
            android:layout_below="@+id/img_exercise"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/exercise"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_workout"
            android:background="@drawable/note"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"/>

        <TextView
            android:id="@+id/text_workout"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/workout"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_custom"
            android:background="@drawable/pen"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            android:id="@+id/text_custom"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/custom"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_music"
            android:background="@drawable/musicplayer"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            android:id="@+id/text_music"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/music"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_more"
            android:background="@drawable/app"
            android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top" />

        <TextView
            android:id="@+id/text_more"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="false" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/text_exit"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/exit"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false" />
</LinearLayout>