<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title_height"
        android:orientation="horizontal"
        android:background="@color/colorBackgroundmain"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom"
        >
        <Button
            android:id="@+id/btn_menu"
            android:layout_marginLeft="@dimen/margin_left"
            android:background="@drawable/menu"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/exercise"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/img_margin_left"
            android:layout_marginRight="@dimen/img_margin_right"
            android:background="@drawable/bung"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/text_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight="0.20"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size"
            android:text="@string/bung"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/arr"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/img_margin_left"
            android:layout_marginRight="@dimen/img_margin_right"
            android:background="@drawable/nguc"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/text_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight="0.20"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size"
            android:text="@string/nguc"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/arr"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/img_margin_left"
            android:layout_marginRight="@dimen/img_margin_right"
            android:background="@drawable/lung"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/text_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight="0.20"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size"
            android:text="@string/lung"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/arr"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/img_margin_left"
            android:layout_marginRight="@dimen/img_margin_right"
            android:background="@drawable/baptay"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/text_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight="0.20"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size"
            android:text="@string/baptay"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/arr"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/img_margin_left"
            android:layout_marginRight="@dimen/img_margin_right"
            android:background="@drawable/cangtay"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="@dimen/text_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight="0.20"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size"
            android:text="@string/cangtay"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/arr"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/img_size"
            android:layout_height="@dimen/img_size"
            android:layout_marginLeft="@dimen/img_margin_left"
            android:layout_marginRight="@dimen/img_margin_right"
            android:background="@drawable/bapchan"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="@dimen/text_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight="0.20"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size"
            android:text="@string/bapchan"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/btn_size"
            android:layout_height="@dimen/btn_size"
            android:background="@drawable/arr"
            />
    </LinearLayout>


</LinearLayout>