<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMain"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_title_height"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@color/colorBackgroundmain"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/margin_left"
                android:background="@drawable/menu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/workout"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/cc" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="@string/bodybuilding"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/fitness" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="@string/fitness"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/gym" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="@string/lifting"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/threedays" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="@string/plan"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/bung1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="@string/homeplan"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/burnfat" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="@string/burnfat"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/abs" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="ABS Burnner"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/chest" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="Chest "
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/gotay" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="arms "
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/leg" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="legs "
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/shouders" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="shouders "
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_marginLeft="@dimen/img_margin_left"
                android:layout_marginRight="@dimen/img_margin_right"
                android:background="@drawable/back" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="@dimen/text_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.20"
                android:gravity="center_vertical"
                android:text="back "
                android:textAllCaps="true"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:layout_gravity="center"
                android:background="@drawable/arr" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>